crates/griffe-cli/tests/snapshots/cli_integration__society_help_is_a_stable_interface_contract.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
La société : paysage, se payer, impôts, clôture, relevé, identité

Usage: griffe society [OPTIONS] <COMMAND>

Commands:
  show             Identité courte, paysage, conversations, chapitres
  pay              Montant possible ce mois-ci sans casser la piste
  current-account  Entre toi et la société : ce que la société te doit (compte courant)
  duties           Ce que tu dois à l'État : dates, montants, où déposer
  duty             Lettre d'une démarche hors de l'app (chemin, montant, ce que l'écran demandera)
  closing          Clore l'exercice, en phrases
  statement        Le relevé : chaque mouvement, une lecture
  identity         La carte d'identité de la société
  filed            Marquer une démarche comme déposée (fait humain, pas une preuve DGFiP)
  unfiled          Retirer le marquage « déposé »
  vat-credit       Crédit de TVA à reporter (case 27 de la dernière CA3 déjà déposée)
  vat-refund       Demander le versement d'un crédit de TVA (case 26), ou l'annuler
  vat-reversal     Rendre une TVA trop déduite (case 15), ou l'annuler
  liquidate        Écrire la TVA du mois
  payroll          Écrire une paie déjà chiffrée (brut, retenue, cotisations patronales)
  help             Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `GRIFFE_DB` (ou `FREEFLOW_DB`)
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
