crates/griffe-cli/tests/snapshots/cli_integration__top_level_help_is_a_stable_interface_contract.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Gestion pour indépendant — pilotable en CLI et par un agent LLM (MCP).

Usage: griffe [OPTIONS] <COMMAND>

Commands:
  init        Crée le coffre. Échoue s'il existe déjà — double saisie masquée en mode interactif
  unlock      Vérifie la passphrase et, avec `--remember`, met la clé en cache dans le trousseau OS. Ne crée jamais le coffre (utilisez `griffe init`)
  lock        Verrouille le coffre : purge la session du trousseau OS
  vault       État du coffre (existence, version du sidecar, session en cache), sans le déverrouiller
  passphrase  Passphrase du coffre : changement en place, ré-chiffrement complet, sauvegarde préalable obligatoire
  client      Clients
  company     Identité légale de l'émetteur (mentions obligatoires des factures)
  day         Le jour : mât, gestes, mois
  people      Les affaires : conversations, missions, chez qui ça sort
  society     La société : paysage, se payer, impôts, clôture, relevé, identité
  follow-up   Relances : file du jour, brouillon `.eml`, jamais d'envoi
  courrier    Courrier : compte d'envoi, essai, lettres à poster
  prospect    Prospection : opportunités, pipeline, interactions
  mission     Missions : création, saisie de temps, TJM effectif, capacité
  quote       Devis : création, révision, envoi, acceptation
  invoice     Facturation : émission, import, avoir, vérification de la chaîne, balance âgée
  payment     Encaissements
  bank        Relevés bancaires : import et rapprochement
  pending     Actions en attente de confirmation humaine (proposées par un agent)
  audit       Journal d'audit
  setup       Premier lancement : ce qui reste à configurer (profil, point de départ, relevé) et le prochain geste
  confirm     Confirme une action en attente : retrouve son type de commande et l'applique
  expense     Dépenses professionnelles et TVA déductible
  asset       Immobilisations et amortissements (matériel, logiciels, reprises de bilan)
  fiscal      Échéances fiscales indicatives (CA3, IS, CFE)
  forecast    Prévisionnel de trésorerie sur 12 mois
  year        Clôture d'exercice : snapshot du résultat, affectation, approbation, documents
  papers      Les papiers : originaux et copies de travail du coffre, classés par nature et durée
  fec         Fichier des Écritures Comptables (FEC) d'un exercice, pour l'expert-comptable
  backup      Sauvegardes : une automatique et silencieuse tourne déjà à chaque commande ; ces sous-commandes ne servent qu'à en forcer une, ou à restaurer
  help        Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `GRIFFE_DB` (ou `FREEFLOW_DB`)
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
  -V, --version
          Print version
