crates/griffe-cli/tests/snapshots/cli_integration__year_help_is_a_stable_interface_contract.snap
---
source: crates/griffe-cli/tests/cli_integration.rs
expression: "String::from_utf8(output.stdout).unwrap()"
---
Clôture d'exercice : snapshot du résultat, affectation, approbation, documents

Usage: griffe year [OPTIONS] <COMMAND>

Commands:
  close      Clôt un exercice : fige le résultat calculé (CA, charges, IS) et enregistre l'affectation (réserve légale, dividendes) en projet, à approuver ensuite. Nécessite confirmation humaine quand `--actor agent:...`
  list       Liste les exercices clos, du plus ancien au plus récent
  show       Détail d'un exercice clos (snapshot, affectation, approbation)
  amend      Révise l'affectation d'un exercice encore en projet (le snapshot reste figé)
  approve    Approuve un exercice (date de l'AG) — il devient immuable. Une sauvegarde du coffre est écrite juste avant (`backups/pre-approve-<période>-<horodatage>.db`) : c'est le seul filet, une approbation ne se défait pas. Nécessite confirmation humaine quand `--actor agent:...`
  rm         Supprime un exercice encore en projet (clos par erreur)
  checklist  Parcours de clôture guidé de l'exercice clos dans PERIOD : où en est la clôture, ce qui la bloque, ce qui mérite attention, et ce qui reste à faire après (approbation, documents, solde d'IS, liasse, dépôt au greffe). Lecture seule
  glossary   Lexique de la clôture : les mots du parcours et des documents (bilan, à-nouveaux, report à nouveau, réserve légale, liasse, FEC…) expliqués sans jargon
  balance    Balance des comptes et bilan (2033-A) dérivés du grand livre de l'exercice clos dans PERIOD — clos ou non : à-nouveaux, ventes, achats, banque, opérations de clôture
  render     Rend un document de clôture (PDF, ou JSON pour la liasse) dans `--out`
  opening    Bilan d'ouverture : reprise du dernier bilan tenu avant FreeFlow (expert-comptable), point de départ du report à nouveau, de la réserve légale et des à-nouveaux du FEC
  help       Print this message or the help of the given subcommand(s)

Options:
      --db <DB>
          Chemin du coffre chiffré. Sinon, lu depuis `GRIFFE_DB` (ou `FREEFLOW_DB`)
      --json
          Imprime le résultat en JSON plutôt qu'en texte lisible — le contrat que consomme un agent
      --actor <ACTOR>
          Qui déclenche la commande : `human` (défaut), `system`, ou `agent:<session>` [default: human]
      --dry-run
          N'écrit rien : montre ce qui serait fait
      --no-color
          Désactive la coloration (déjà minimale) de la sortie humaine
      --passphrase-file <PASSPHRASE_FILE>
          Lit la passphrase dans ce fichier (refusé si son mode est plus ouvert que 0600)
      --passphrase-command <PASSPHRASE_COMMAND>
          Exécute cette commande et prend sa sortie standard comme passphrase — ex. `pass show freeflow`, `op read op://Perso/freeflow/passphrase`
      --passphrase-stdin
          Lit la passphrase sur l'entrée standard (une ligne)
      --non-interactive
          N'invite jamais au terminal : échoue proprement si aucune source non interactive n'a fourni de passphrase, plutôt que de bloquer en attente d'une frappe
      --remember
          Met la clé en cache dans le trousseau OS pour les appels suivants (jamais automatique)
      --ttl <TTL>
          Durée de la session mise en cache (défaut 12h). Implique `--remember`
  -h, --help
          Print help
